--- a/projects/javascript/perlinNoise.html
+++ b/projects/javascript/perlinNoise.html
@@ -70,7 +70,7 @@ function rand_vect(){
 <script>
 var cnvs1 = document.getElementById("cnvs1");
 cnvs1.width = cnvs1.height = 256;
-var ctx1  = cnvs1.getContext("2d";)
+var ctx1  = cnvs1.getContext("2d";
 setInterval(function(){
 var vector = perlin.rand_vect();
 ctx1.beginPath();
