roadkillcat -> joeiddon, joeiddon.me -> joeiddon.github.io

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: /404.html
 <html>
   <head>
     <title> Error 404: Page Not Found </title>
-    <link rel="icon" href="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/logo_teal.png"></link>
+    <link rel="icon" href="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/logo_teal.png"></link>
     
     <style>
       body {
@@ -40,10 +40,10 @@ permalink: /404.html
       you appear to have gotten lost
       call 999 to be rescued, or
       drop an issue
-      <a href="http://github.com/roadkillcat/roadkillcat.github.io/issues">here</a>
+      <a href="http://github.com/joeiddon/joeiddon.github.io/issues">here</a>
       stating where you got this link.
       I appreciate your time. Click
-      <a href="http://roadkillcat.github.io">here</a>
+      <a href="http://joeiddon.github.io">here</a>
       to return to the homepage.
     </p>
   </body>
