--- a/club/index.html
+++ b/club/index.html
@@ -2,16 +2,16 @@
 layout: default
 ---
 
-<link rel="stylesheet" href="http://joeiddon.me/projects/project.css">
+<link rel="stylesheet" href="http://joeiddon.github.io/projects/project.css">
 
 <h1>Arduino Club</h1>
 
 <p>
-At the end of the 2017 Summer Term, I was granted some money to start a club revolving around <a href="http://joeiddon.me/projects/arduino/about">Arduinos</a>. We currently meet on Wednesday and Friday lunchtimes and work on projects together.
+At the end of the 2017 Summer Term, I was granted some money to start a club revolving around <a href="http://joeiddon.github.io/projects/arduino/about">Arduinos</a>. We currently meet on Wednesday and Friday lunchtimes and work on projects together.
 </p>
 
 <p>
-To keep track of what we spend the money on, <a href="http://joeiddon.me/club/log">this page</a> contains a table of things we've bought.
+To keep track of what we spend the money on, <a href="http://joeiddon.github.io/club/log">this page</a> contains a table of things we've bought.
 </p>
 
 <p>
@@ -21,14 +21,14 @@ The images below are linked to their corresponding projects so feel free to take
 <table>
   <tr>
     <td>
-      <a href="http://joeiddon.me/club/snake">
-      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/snake_fin.jpg"></img>
+      <a href="http://joeiddon.github.io/club/snake">
+      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/snake_fin.jpg"></img>
       </a>
     </td>
     
     <td>
-      <a href="http://joeiddon.me/club/hexapod">
-      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/hexapod/cut_body.jpg"></img>
+      <a href="http://joeiddon.github.io/club/hexapod">
+      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/hexapod/cut_body.jpg"></img>
       </a>
     </td>
   </tr>
