--- a/old_site.html
+++ b/old_site.html
@@ -2,7 +2,7 @@
 <html>
 
 <title>Meow :)</title>
-<link rel=icon href="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/HomepageFavicon.png">
+<link rel=icon href="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/HomepageFavicon.png">
 
 	
 <style>
@@ -71,21 +71,21 @@ pre {
 		<tr>
 			<td>
 				<canvas id="mazeCanvas"></canvas>
-				<a href="http://roadkillcat.github.io/3dMazeGame/mazeGenerater.html">see how this maze was created</a>
+				<a href="http://joeiddon.github.io/3dMazeGame/mazeGenerater.html">see how this maze was created</a>
 			</td>
 			<td>
-				<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/mazePreview3d.JPG"></img>
-				<a href="http://roadkillcat.github.io/3dMazeGame/maze.html">try to solve a maze in 3d</a>
+				<img src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/mazePreview3d.JPG"></img>
+				<a href="http://joeiddon.github.io/3dMazeGame/maze.html">try to solve a maze in 3d</a>
 			</td>
 		</tr>
 		<tr>
 			<td>
-				<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/ballPreview3d.JPG"></img>
-				<a href="https://roadkillcat.github.io/UltiBouncingBall/BallHtml.html?0.2,10,15,40,4,1,//gravity,no_balls,min_radius,max_radius,velocity,collisions">play with some bouncing balls</a>
+				<img src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/ballPreview3d.JPG"></img>
+				<a href="https://joeiddon.github.io/UltiBouncingBall/BallHtml.html?0.2,10,15,40,4,1,//gravity,no_balls,min_radius,max_radius,velocity,collisions">play with some bouncing balls</a>
 			</td>
 			<td>
-				<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/gravityPreview3d.JPG"></img>
-				<a href="https://roadkillcat.github.io/Ulti-Gravity/GravityHtml.html?100000,4,1,20,1,0,1,//G_Constant_(stength_of_gravity),no_of_balls,min_radius,max_radius,starting_velocity,merge_on_collision,tracing">play with gravity</a>
+				<img src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/gravityPreview3d.JPG"></img>
+				<a href="https://joeiddon.github.io/Ulti-Gravity/GravityHtml.html?100000,4,1,20,1,0,1,//G_Constant_(stength_of_gravity),no_of_balls,min_radius,max_radius,starting_velocity,merge_on_collision,tracing">play with gravity</a>
 			</td>
 		</tr>
 	</table>
