--- a/projects/index.html
+++ b/projects/index.html
@@ -27,7 +27,7 @@ For writing algorithms, solving problems, scientific computing, networking and g
 </p>
 
 <p>
-On the other hand, projects written in JavaScript lend themselves to posts and explanations much more. If you hover over the projects tab at the top, you will be able to select JavaScript and see some of my Projects. Most of those posts (once you click through on the images) have links at the top which will take you to a place where you can view them. I won't go in to what I use JavaScript for here, but you can read this <a href='http://joeiddon.me/projects/javascript/about.html'>about page</a> I wrote on them which explains why I love coding in it.
+On the other hand, projects written in JavaScript lend themselves to posts and explanations much more. If you hover over the projects tab at the top, you will be able to select JavaScript and see some of my Projects. Most of those posts (once you click through on the images) have links at the top which will take you to a place where you can view them. I won't go in to what I use JavaScript for here, but you can read this <a href='http://joeiddon.github.io/projects/javascript/about.html'>about page</a> I wrote on them which explains why I love coding in it.
 </p>
 
 <p>
@@ -49,7 +49,7 @@ And to fill up some space, here's a cool spinning tetrahedron that I never bothe
 
 <canvas id='cnvs'></canvas>
 
-<script src='https://rawgit.com/RoadKillCat/3dSimulationVR/master/thirdEngine.js'></script>
+<script src='https://rawgit.com/joeiddon/3dSimulationVR/master/thirdEngine.js'></script>
 <script>
 cnvs = document.getElementById('cnvs');
 ctx = cnvs.getContext('2d');
