--- a/projects/javascript/about.html
+++ b/projects/javascript/about.html
@@ -12,7 +12,7 @@ For example one of my first things I coded in it was this prime distribution gra
 something, but not as graphical and not as cool. 
 Here it is:
 </p>
-<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/primeGraph.JPG" style="width: 700px"></img>
+<img src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/primeGraph.JPG" style="width: 700px"></img>
 
 <p>
 It may not seem amazing, but this example shows how javascript isnt just useful for creating websites. Just look at the code for
@@ -58,7 +58,7 @@ In this example of calculating primes, it can be seen that javascript performs w
 </p>
 
 <p>
-To have at look at the things I have made, click <a href="http://joeiddon.me/projects/javascript">here</a>.
+To have at look at the things I have made, click <a href="http://joeiddon.github.io/projects/javascript">here</a>.
 </p>
 
 <p>
