--- a/projects/javascript/chess.html
+++ b/projects/javascript/chess.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1>First AI - a chess player</h1>
 
-<h2><a href="http://joeiddon.me/ChessAI">play it here</a></h2>
+<h2><a href="http://joeiddon.github.io/ChessAI">play it here</a></h2>
 
 <style>
 input {
