--- a/projects/javascript/mazeGeneration.html
+++ b/projects/javascript/mazeGeneration.html
@@ -91,7 +91,7 @@ While there are frontier cells
 <button onclick=" width--; height--; initilise(); algorithm='prims'">Decrease Size</button>
 
 <p>Overall, as stated above, the backtracker algorithm is best for generating 2d mazes to be solved from above but when walking around in 3d inside the mazes, the prims algorithm makes escaping more difficult as it is really disorientating walking down all the dead-ends.</p>
-<p>Of course, you can solve the mazes in 2d from the ones generated above or if you want them to be generated instantly without waiting, you can see them side by side <a href="http://joeiddon.me/3dMazeGame/exampleMazes.html">here</a>. And if you want to attempt escaping a maze in 3d, have a go <a href="http://joeiddon.me/3dMazeGame/maze.html">here</a></p>
+<p>Of course, you can solve the mazes in 2d from the ones generated above or if you want them to be generated instantly without waiting, you can see them side by side <a href="http://joeiddon.github.io/3dMazeGame/exampleMazes.html">here</a>. And if you want to attempt escaping a maze in 3d, have a go <a href="http://joeiddon.github.io/3dMazeGame/maze.html">here</a></p>
 
 <script>
 width = height = 10
