--- a/projects/javascript/terrain.html
+++ b/projects/javascript/terrain.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1>A smooth terrain generator using my Perlin Noise and 3D Engine JS libraries</h>
 
-<h2><a href="http://joeiddon.me/3dSimulationVR/terrain.html">take a look here</a></h2>
+<h2><a href="http://joeiddon.github.io/3dSimulationVR/terrain.html">take a look here</a></h2>
 
 <p>
 So to summarise the two libraries, we essentially have two funcitons to work with:
@@ -91,7 +91,7 @@ function genWorld(){
 </pre>
 
 <p>
-And that's it! The rest of the code (sliders, info stuff, controls) is pretty boring so I won't talk about that, but feel free to checkout the <a href="https://github.com/RoadKillCat/3dSimulationVR/blob/master/terrain.html">source code on GitHub</a> if you are interested.
+And that's it! The rest of the code (sliders, info stuff, controls) is pretty boring so I won't talk about that, but feel free to checkout the <a href="https://github.com/joeiddon/3dSimulationVR/blob/master/terrain.html">source code on GitHub</a> if you are interested.
 </p>
 
 <p>Link at top to try it out!</p>
