--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -2,50 +2,50 @@
 layout: default
 ---
 
-<link rel="stylesheet" href="http://joeiddon.me/projects/project.css">
+<link rel="stylesheet" href="http://joeiddon.github.io/projects/project.css">
 
 <h1> Arduinos </h1>
 
-<p> Welcome to my arduino-based projects. If you want to read a little bit about arduinos, visit the <a href="http://joeiddon.me/projects/arduino/about">about page</a> that I made on them. Otherwise, click on any of the projects below to see what theyre about... </p>
+<p> Welcome to my arduino-based projects. If you want to read a little bit about arduinos, visit the <a href="http://joeiddon.github.io/projects/arduino/about">about page</a> that I made on them. Otherwise, click on any of the projects below to see what theyre about... </p>
 
 
 <table>
   <tr>
     <td>
-      <a href="http://joeiddon.me/projects/arduino/slideRobotArm">
-      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/slideRobotArm.JPG"></img>
+      <a href="http://joeiddon.github.io/projects/arduino/slideRobotArm">
+      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/slideRobotArm.JPG"></img>
       </a>
     </td>
     
     <td>
-      <a href="http://joeiddon.me/projects/arduino/mg996rRobotArm">
-      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/robotArm.jpg"></img>
+      <a href="http://joeiddon.github.io/projects/arduino/mg996rRobotArm">
+      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/robotArm.jpg"></img>
       </a>
     </td>
   </tr>
 
   <tr>
     <td>
-      <a href="http://joeiddon.me/projects/arduino/quadropod">
-      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/quadropod.png"></img>
+      <a href="http://joeiddon.github.io/projects/arduino/quadropod">
+      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/quadropod.png"></img>
       </a>
     </td>
     <td>
-      <a href="http://joeiddon.me/projects/arduino/bitcoin">
-      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/bitcoin_side.jpeg"></img>
+      <a href="http://joeiddon.github.io/projects/arduino/bitcoin">
+      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/bitcoin_side.jpeg"></img>
       </a>
     </td>
   </tr>
   
   <tr>
     <td>
-      <a href="http://joeiddon.me/projects/arduino/laser">
-      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/mirrorLASER.jpg"></img>
+      <a href="http://joeiddon.github.io/projects/arduino/laser">
+      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/mirrorLASER.jpg"></img>
       </a>
     </td>
     <!--<td>
-      <a href="http://joeiddon.me/projects/arduino/bitcoin">
-      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/bitcoin_side.jpeg"></img>
+      <a href="http://joeiddon.github.io/projects/arduino/bitcoin">
+      <img class="project_img" src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/bitcoin_side.jpeg"></img>
       </a>
     </td>-->
   </tr>
