--- a/projects/javascript/3dMazeGame.html
+++ b/projects/javascript/3dMazeGame.html
@@ -4,14 +4,14 @@ layout: default
 
 <h1>A maze game in 3D</h1>
 
-<h2><a href="http://joeiddon.me/3dMazeGame/index.html">try and escape here</a></h2>
+<h2><a href="http://joeiddon.github.io/3dMazeGame/index.html">try and escape here</a></h2>
 
 <p>
-After completing my 3D JavaScript Engine (<a href="https://github.com/RoadKillCat/3dSimulationVR/blob/master/thirdEngine.js">see source</a>) and having just been experimenting with different maze generation algorithms (<a href="http://joeiddon.me/projects/javascript/mazeGeneration">see my post</a>) I decided to make a simple 3D Maze Game.
+After completing my 3D JavaScript Engine (<a href="https://github.com/joeiddon/3dSimulationVR/blob/master/thirdEngine.js">see source</a>) and having just been experimenting with different maze generation algorithms (<a href="http://joeiddon.github.io/projects/javascript/mazeGeneration">see my post</a>) I decided to make a simple 3D Maze Game.
 </p>
 
 <p>
-<a href="https://github.com/RoadKillCat/3dMazeGame/blob/master/script.js">The code</a> still needs a bit more neatening up an shortening but is much better than <a href="https://github.com/RoadKillCat/3dMazeGame/blob/master/maze.js">my old version</a> which didn't use a library and had all the code muddled together.
+<a href="https://github.com/joeiddon/3dMazeGame/blob/master/script.js">The code</a> still needs a bit more neatening up an shortening but is much better than <a href="https://github.com/joeiddon/3dMazeGame/blob/master/maze.js">my old version</a> which didn't use a library and had all the code muddled together.
 </p>
 
 <p>
