--- a/projects/javascript/sierpinski.html
+++ b/projects/javascript/sierpinski.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1>The Sierspinski Curve</h1>
 
-<h2><a href="http://joeiddon.me/SierpinskiCurve">see them generated here</a></h2>
+<h2><a href="http://joeiddon.github.io/SierpinskiCurve">see them generated here</a></h2>
 
 <p>
 "The Sierpinski curve is mathematically defined as the the limiting curve of an infinite sequence of curves numbered by an index n = 1, 2, 3,..."
@@ -20,12 +20,12 @@ img {
 }
 </style>
 
-<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/sierpinski1.JPG"></img>
-<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/sierpinski2.JPG"></img>
-<img src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/sierpinski3.JPG"></img>
+<img src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/sierpinski1.JPG"></img>
+<img src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/sierpinski2.JPG"></img>
+<img src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/sierpinski3.JPG"></img>
 
 <p>
-The generation of these curves can be done really succinctly with recursion. Two functions are required to do this which call each other. Assuming the functions "bendRight" and "bendLeft" are already defined (you can have play with how these work with this interactive demonstration <a href="http://joeiddon.me/SierpinskiCurve/keyboard">here</a>) as functions to move the current path of the curve round to the right or left respectively, these are the two functions:
+The generation of these curves can be done really succinctly with recursion. Two functions are required to do this which call each other. Assuming the functions "bendRight" and "bendLeft" are already defined (you can have play with how these work with this interactive demonstration <a href="http://joeiddon.github.io/SierpinskiCurve/keyboard">here</a>) as functions to move the current path of the curve round to the right or left respectively, these are the two functions:
 </p>
 
 <pre>
@@ -56,5 +56,5 @@ function zag(n){
 </pre>
 
 <p>
-Having both these defined, we can simply call zig(2 ** n) in the "main program" to generate the curve. You can watch them be generated <a href="http://joeiddon.me/SierpinskiCurve">here</a> if you didn't already follow the link at the top.
+Having both these defined, we can simply call zig(2 ** n) in the "main program" to generate the curve. You can watch them be generated <a href="http://joeiddon.github.io/SierpinskiCurve">here</a> if you didn't already follow the link at the top.
 </p>
