--- a/404.html
+++ b/404.html
@@ -40,10 +40,10 @@ permalink: /404.html
       you appear to have gotten lost
       call 999 to be rescued, or
       drop an issue
-      <a href="http://github.com/joeiddon/joeiddon.github.io/issues">here</a>
+      <a href="https://github.com/joeiddon/joeiddon.github.io/issues">here</a>
       stating where you got this link.
       I appreciate your time. Click
-      <a href="http://joeiddon.github.io">here</a>
+      <a href="https://joeiddon.github.io">here</a>
       to return to the homepage.
     </p>
   </body>
