--- a/club/snake.html
+++ b/club/snake.html
@@ -27,7 +27,7 @@ The Arduino sketch (code) for this can be seen over on <a href="https://github.c
 We were prototyping with an Arduino Mega and a breadboard connected with some jumpers:
 </p>
 
-<img src="http://joeiddon.github.io/images/prototype.jpg"></img>
+<img src="https://joeiddon.github.io/images/prototype.jpg"></img>
 
 <p>
 Now that the code was working, we decided to start on the finished product. To do this, we needed to be able to solder (to make a proper controller) and this would be a valuable skill for the future. Everyone picked it up straight away.
@@ -37,7 +37,7 @@ Now that the code was working, we decided to start on the finished product. To d
 We then gathered the components - the main thing being a more compact matrix. We brought one from Ebay quite cheaply but it required us to solder it together including a miniscule surface-mount chip.
 </p>
 
-<!--<img src="http://joeiddon.github.io/images/matrix/matrix.jpg"></img>-->
+<!--<img src="https://joeiddon.github.io/images/matrix/matrix.jpg"></img>-->
 
 <p>
 Here's the driver chip that we tried to solder and a close-up of the LED matrix.
@@ -62,8 +62,8 @@ And that was pretty much it! We uploaded the sketch to the Nano that we had alre
 Here are some photos of the finished product, and finally a video of it in action.
 </p>
 
-<img class="third_img" src="http://joeiddon.github.io/images/finnishedSide.jpg"
-><img class="third_img" src="http://joeiddon.github.io/images/finnishedBottom.jpg"
-><img class="third_img" src="http://joeiddon.github.io/images/finnishedTop.jpg">
+<img class="third_img" src="https://joeiddon.github.io/images/finnishedSide.jpg"
+><img class="third_img" src="https://joeiddon.github.io/images/finnishedBottom.jpg"
+><img class="third_img" src="https://joeiddon.github.io/images/finnishedTop.jpg">
 
 <iframe width="1260" height="720" src="https://www.youtube.com/embed/ASf3uLuhJrI?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
