--- a/old_site.html
+++ b/old_site.html
@@ -71,11 +71,11 @@ pre {
 		<tr>
 			<td>
 				<canvas id="mazeCanvas"></canvas>
-				<a href="http://joeiddon.github.io/3dMazeGame/mazeGenerater.html">see how this maze was created</a>
+				<a href="https://joeiddon.github.io/3dMazeGame/mazeGenerater.html">see how this maze was created</a>
 			</td>
 			<td>
 				<img src="https://raw.githubusercontent.com/joeiddon/joeiddon.github.io/master/images/mazePreview3d.JPG"></img>
-				<a href="http://joeiddon.github.io/3dMazeGame/maze.html">try to solve a maze in 3d</a>
+				<a href="https://joeiddon.github.io/3dMazeGame/maze.html">try to solve a maze in 3d</a>
 			</td>
 		</tr>
 		<tr>
