--- a/projects/arduino/bitcoin.html
+++ b/projects/arduino/bitcoin.html
@@ -8,7 +8,7 @@ layout: default
 
 <p>After reading up on the module, I setup a nodeJS server to practice some HTTP requests and get the board working.</p>
 
-<p>I then needed to find a lightweight website that would allow me to extract the current price. I came across this <a href="http://api.coindesk.com/v1/bpi/currentprice.json">coindesk json api</a></p>
+<p>I then needed to find a lightweight website that would allow me to extract the current price. I came across this <a href="https://api.coindesk.com/v1/bpi/currentprice.json">coindesk json api</a></p>
 
 <p>After succesfully working out a way of extracting the price from that, I then worked on the LED display aspect. The price of bitcoin was roughly 8000 pounds, but having spiked on the 16th December to 14,592, I would need 14 bits to safely be able to display the full price (allowing me up to 16383).</p>
 
@@ -22,7 +22,7 @@ layout: default
 <iframe width="1280" height="720" src="https://www.youtube.com/embed/?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
 -->
 
-<p>I then just needed to finish writing the code (available on github <a href="http://github.com/joeiddon/BinaryBitcoin">here</a>) and connnect an old 1S lipo from a quadcopter and it was working!</p>
+<p>I then just needed to finish writing the code (available on github <a href="https://github.com/joeiddon/BinaryBitcoin">here</a>) and connnect an old 1S lipo from a quadcopter and it was working!</p>
 
 <p>Here are some photos of the finished thing. (the price at the time was: 01111110100110 which is 8102 pounds).</a>
 
