--- a/projects/arduino/mg996rRobotArm.html
+++ b/projects/arduino/mg996rRobotArm.html
@@ -5,11 +5,11 @@ layout: default
 <h1>My second attempt at building a robot arm... </h1>
 
 <p>
-If you haven't seen my first arduino robot arm, then please checkout that project <a href="http://joeiddon.github.io/projects/arduino/slideRobotArm">here</a>. The idea of that project was a test of what was possible using servos and an arduino. I wanted to see if I could build a strong, accurate and repeatable robot arm and I think I succeeded in doing so shown by that video. However, I spent no time planning or thinking through the design, I was just foccused on the one goal of picking and dropping stuff down a slide. This led to me building the frame out of some weak wood and having a bad bottom axel where the whole weight of the arm was resting on the flimsy plastic servo at the bottom.
+If you haven't seen my first arduino robot arm, then please checkout that project <a href="https://joeiddon.github.io/projects/arduino/slideRobotArm">here</a>. The idea of that project was a test of what was possible using servos and an arduino. I wanted to see if I could build a strong, accurate and repeatable robot arm and I think I succeeded in doing so shown by that video. However, I spent no time planning or thinking through the design, I was just foccused on the one goal of picking and dropping stuff down a slide. This led to me building the frame out of some weak wood and having a bad bottom axel where the whole weight of the arm was resting on the flimsy plastic servo at the bottom.
 </p>
   
 <p> 
-After finnishing it, I realised that the project had potential but to do anything more substantial/ useful, I needed to spend more time on its design and use different motors. I researched in-depth the different ways robot arms could be configured involving things like their degress of freedom, max torque and there working area. If you are interested, checkout <a href="http://www.societyofrobots.com/robot_arm_tutorial.shtml">this introduction</a>. Anyway, I settled on bulding an articulated robot arm which allowed for the most versatility and degrees of freedom.
+After finnishing it, I realised that the project had potential but to do anything more substantial/ useful, I needed to spend more time on its design and use different motors. I researched in-depth the different ways robot arms could be configured involving things like their degress of freedom, max torque and there working area. If you are interested, checkout <a href="https://www.societyofrobots.com/robot_arm_tutorial.shtml">this introduction</a>. Anyway, I settled on bulding an articulated robot arm which allowed for the most versatility and degrees of freedom.
 </p>
 
 <p>
