--- a/projects/javascript/about.html
+++ b/projects/javascript/about.html
@@ -58,7 +58,7 @@ In this example of calculating primes, it can be seen that javascript performs w
 </p>
 
 <p>
-To have at look at the things I have made, click <a href="http://joeiddon.github.io/projects/javascript">here</a>.
+To have at look at the things I have made, click <a href="https://joeiddon.github.io/projects/javascript">here</a>.
 </p>
 
 <p>
