--- a/projects/javascript/mazeGeneration.html
+++ b/projects/javascript/mazeGeneration.html
@@ -24,7 +24,7 @@ td {
 <h1>Maze Generation Algorithms</h1>
 
 <p>
-As part of an idea to create a 3d maze game, I needed to be able to generate random maze layouts. After reading <a href="https://en.wikipedia.org/wiki/Maze_generation_algorithm">this wikipedia page</a>, I got a general picture of how one might go about this task. I then came across <a href="http://www.astrolog.org/labyrnth/algrithm.htm">this great article</a> which went into a greated depth on more different kinds of algorithms and their properties.
+As part of an idea to create a 3d maze game, I needed to be able to generate random maze layouts. After reading <a href="https://en.wikipedia.org/wiki/Maze_generation_algorithm">this wikipedia page</a>, I got a general picture of how one might go about this task. I then came across <a href="https://www.astrolog.org/labyrnth/algrithm.htm">this great article</a> which went into a greated depth on more different kinds of algorithms and their properties.
 <p>
 
 <p>
@@ -91,7 +91,7 @@ While there are frontier cells
 <button onclick=" width--; height--; initilise(); algorithm='prims'">Decrease Size</button>
 
 <p>Overall, as stated above, the backtracker algorithm is best for generating 2d mazes to be solved from above but when walking around in 3d inside the mazes, the prims algorithm makes escaping more difficult as it is really disorientating walking down all the dead-ends.</p>
-<p>Of course, you can solve the mazes in 2d from the ones generated above or if you want them to be generated instantly without waiting, you can see them side by side <a href="http://joeiddon.github.io/3dMazeGame/exampleMazes.html">here</a>. And if you want to attempt escaping a maze in 3d, have a go <a href="http://joeiddon.github.io/3dMazeGame/maze.html">here</a></p>
+<p>Of course, you can solve the mazes in 2d from the ones generated above or if you want them to be generated instantly without waiting, you can see them side by side <a href="https://joeiddon.github.io/3dMazeGame/exampleMazes.html">here</a>. And if you want to attempt escaping a maze in 3d, have a go <a href="https://joeiddon.github.io/3dMazeGame/maze.html">here</a></p>
 
 <script>
 width = height = 10
