--- a/projects/javascript/perlinNoise.html
+++ b/projects/javascript/perlinNoise.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <h1>Creating Perlin Noise in JS</h1>
-<script src="http://joeiddon.github.io/perlin/perlin.js"></script>
+<script src="https://joeiddon.github.io/perlin/perlin.js"></script>
 
 <p>
 Perlin Noise is a a type of <a href="https://en.wikipedia.org/wiki/Gradient_noise">gradient noise</a> used mainly in computer graphics. It allows for smooth natural-looking randomness which can be applied to a number of things such as: texture of surfaces, flames and terrain - what I will be using it for. The most well known place perlin noise is implented is minecraft where it is used generate the landscape so the hills, caves etc.
@@ -23,7 +23,7 @@ Following <a href="https://en.wikipedia.org/wiki/Perlin_noise">this wikipedia pa
 <li>Interpolate the 2^n dot products to get the value
 </ol>
 
-<p>The result of my library in 2 dimensions based on the above steps is: (static noise on left and my perlin noise on the right to show the difference). To see a demo in colour, visit my <a href="http://joeiddon.github.io/perlin/demo">demo page</a>.To see how this result can be used for something more interesting than blurry gradients, checkout <a href="http://joeiddon.github.io/projects/javascript/terrainGeneration">my 3d terrain generator</a>.</p>
+<p>The result of my library in 2 dimensions based on the above steps is: (static noise on left and my perlin noise on the right to show the difference). To see a demo in colour, visit my <a href="https://joeiddon.github.io/perlin/demo">demo page</a>.To see how this result can be used for something more interesting than blurry gradients, checkout <a href="https://joeiddon.github.io/projects/javascript/terrainGeneration">my 3d terrain generator</a>.</p>
 
 <canvas id="cnvs"></canvas>
 <script>
