--- a/projects/javascript/terrain.html
+++ b/projects/javascript/terrain.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1>A smooth terrain generator using my Perlin Noise and 3D Engine JS libraries</h>
 
-<h2><a href="http://joeiddon.github.io/3dSimulationVR/terrain.html">take a look here</a></h2>
+<h2><a href="https://joeiddon.github.io/3dSimulationVR/terrain.html">take a look here</a></h2>
 
 <p>
 So to summarise the two libraries, we essentially have two funcitons to work with:
