--- a/club/hexapod.html
+++ b/club/hexapod.html
@@ -16,7 +16,7 @@ In order to laser cutter a shape out of acrylic, you need to send the machine in
 </p>
 
 <p>
-The software we had available to us is called <a href="http://www.techsoft.co.uk/Products/Software/2DDesignV2">2D Design</a> and turned out to be really intuitive to use.
+The software we had available to us is called <a href="https://www.techsoft.co.uk/Products/Software/2DDesignV2">2D Design</a> and turned out to be really intuitive to use.
 </p>
 
 <p>
