--- a/projects/javascript/3dMazeGame.html
+++ b/projects/javascript/3dMazeGame.html
@@ -4,10 +4,10 @@ layout: default
 
 <h1>A maze game in 3D</h1>
 
-<h2><a href="http://joeiddon.github.io/3dMazeGame/index.html">try and escape here</a></h2>
+<h2><a href="https://joeiddon.github.io/3dMazeGame/index.html">try and escape here</a></h2>
 
 <p>
-After completing my 3D JavaScript Engine (<a href="https://github.com/joeiddon/3dSimulationVR/blob/master/thirdEngine.js">see source</a>) and having just been experimenting with different maze generation algorithms (<a href="http://joeiddon.github.io/projects/javascript/mazeGeneration">see my post</a>) I decided to make a simple 3D Maze Game.
+After completing my 3D JavaScript Engine (<a href="https://github.com/joeiddon/3dSimulationVR/blob/master/thirdEngine.js">see source</a>) and having just been experimenting with different maze generation algorithms (<a href="https://joeiddon.github.io/projects/javascript/mazeGeneration">see my post</a>) I decided to make a simple 3D Maze Game.
 </p>
 
 <p>
