--- a/projects/javascript/gameOfLife.html
+++ b/projects/javascript/gameOfLife.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1>Conway's Game Of Life</h1>
 
-<h2><a href="http://joeiddon.github.io/GameOfLife">Check it out here</a></h2>
+<h2><a href="https://joeiddon.github.io/GameOfLife">Check it out here</a></h2>
 
 <p>The Game of Life, created by John Conway, is a cellular automaton. The game is "played" on an infinite, orthogonal 2 dimensional grid that marks out cells.</p>
 
