--- a/projects/javascript/gravity.html
+++ b/projects/javascript/gravity.html
@@ -4,11 +4,11 @@ layout: default
 
 <h1>A Simulating of Gravity</h1>
 
-<h2><a href="http://joeiddon.github.io/GravitySimulation/">run the simulation here</a></h2>
-<!--<h2><a href="http://joeiddon.github.io/UltiGravity/?100000,4,1,20,1,0,1,//G_Constant(stength_of_gravity),no_balls,min_radius,max_radius,starting_velocity,merge_on_collision,tracing">run a random spawning simulation here</a></h2>-->
+<h2><a href="https://joeiddon.github.io/GravitySimulation/">run the simulation here</a></h2>
+<!--<h2><a href="https://joeiddon.github.io/UltiGravity/?100000,4,1,20,1,0,1,//G_Constant(stength_of_gravity),no_balls,min_radius,max_radius,starting_velocity,merge_on_collision,tracing">run a random spawning simulation here</a></h2>-->
 
 <p>
-This second simulation shares some aspects to my first <a href="http://joeiddon.github.io/projects/javascript/bouncingBall">bouncing ball</a> but instead of the focus on being the collision between balls in space, this simulation focuses on how balls with different masses interact through gravity.
+This second simulation shares some aspects to my first <a href="https://joeiddon.github.io/projects/javascript/bouncingBall">bouncing ball</a> but instead of the focus on being the collision between balls in space, this simulation focuses on how balls with different masses interact through gravity.
 </p>
 
 <p>
