--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<link rel="stylesheet" href="http://joeiddon.github.io/projects/project.css">
+<link rel="stylesheet" href="https://joeiddon.github.io/projects/project.css">
 
 <h1>Javascript</h1>
 
