--- a/projects/javascript/paint.html
+++ b/projects/javascript/paint.html
@@ -4,8 +4,8 @@ layout: default
 
 <h1>Paint in the HTML5 Canvas</h1>
 
-<h2><a href="http://joeiddon.github.io/Paint">Basic Paint Here</a></h2>
-<h2><a href="http://joeiddon.github.io/Paint/floodfill">Floodfill Paint Here</a></h2>
+<h2><a href="https://joeiddon.github.io/Paint">Basic Paint Here</a></h2>
+<h2><a href="https://joeiddon.github.io/Paint/floodfill">Floodfill Paint Here</a></h2>
 
 <p>
 These are just some simple paint applications I made so I can use them for when I need to visualise or draw something quickly and I don't have any paper.
