--- a/projects/javascript/snake.html
+++ b/projects/javascript/snake.html
@@ -4,15 +4,15 @@ layout: default
 
 <h1>The original snake game</h1>
 
-<h2><a href="http://joeiddon.github.io/SnakeGame/2d.html">play it in 2d here (controls are arrow-keys)</a></h2>
-<h2><a href="http://joeiddon.github.io/SnakeGame/3d.html">play it in 3d here</a></h2>
+<h2><a href="https://joeiddon.github.io/SnakeGame/2d.html">play it in 2d here (controls are arrow-keys)</a></h2>
+<h2><a href="https://joeiddon.github.io/SnakeGame/3d.html">play it in 3d here</a></h2>
 
 <p>
 This was a proof-of-concept project to just test the basic snake game.
 </p>
 
 <p>
-The main application was to use the same code (translated to C) for the Arduino Club's <a href="http://joeiddon.github.io/club/snake">snake game</a>.
+The main application was to use the same code (translated to C) for the Arduino Club's <a href="https://joeiddon.github.io/club/snake">snake game</a>.
 </p>
 
 <p>
